# gr_pusher

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  compile_commands.json  todo.org
cmake/Modules/: FindCUDPP.cmake  FindNumPy.cmake
include/: enum_types.h  fields.h  geodesic_solve.h  grid.h  metrics-analytic.h  metrics.h  multi_array.h  ptc.h  quadmesh.h  solve.h  vec3.h
include/algorithms/: interp_template.h  interpolation.h
include/detail/: fields_impl.hpp  grid_impl.hpp  multi_array_impl.hpp  multi_array_iter_impl.hpp  multi_array_utils.hpp
include/metrics/: metric_base.h  metric_boyer_lindquist.h  metric_cartesian.h  metric_cks.h  metric_kerr_schild.h  metric_log_boyer_lindquist.h  metric_log_spherical.h  metric_schwarzschild.h  metric_spherical.h
include/utils/: memory.h  util_functions.h
src/: CMakeLists.txt  fields.cpp  geodesic_solve.cpp  grid.cpp  main.cpp  metrics-analytic.cpp  metrics.cpp  multi_array.cpp  pusher-boyer.cpp  pusher-cks.cpp  pusher-kerr-schild.cpp  pusher-schwarzschild.cpp  solve.cpp
src/metrics/: metric_cks.cpp
tests/: CMakeLists.txt  test_AD.cpp  test_cudaLE.cpp  test_field.cpp  test_grid.cpp  test_interpolation.cpp  test_memory.cpp  test_mesh.cpp  test_metric.cpp
